add virtual thread task executor